fix: open unknown existing CFs silently to allow Forest restart after conversion
After besu storage x-convert-to-forest, the database has leftover Bonsai-only
column families (ACCOUNT_INFO_STATE, CODE_STORAGE, etc.) that the Forest format
doesn't know about. RocksDB requires all existing CFs to be listed when opening,
and previously threw "Unhandled column families" on Forest startup.

Fix: in RocksDBColumnarKeyValueStorage, after building trimmedSegments, add a
plain ColumnFamilyDescriptor for any existing CF not covered by any known or
ignorable segment. The resulting handles are tracked in extraColumnHandles and
closed on shutdown, but are not registered in columnHandlesBySegmentIdentifier,
so they are invisible to storage operations.

Update affected tests to match the new contract: unknown CFs are silently
opened rather than rejected.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

Signed-off-by: Jason Frame <jason.frame@consensys.net>